aks-dockerhub-k8s/apigateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigateway
spec:
  type: LoadBalancer
  selector:
    app: apigateway
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway
  labels:
    app: apigateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      name: apigateway
      labels:
        app: apigateway
    spec:
      containers:
        - name: apigateway
          image: habibibnhossain/poc-apigateway:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
