aks-dockerhub-k8s/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      name: redis
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379

#---

#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: nginx
#  labels:
#    app: nginx
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: nginx
#  template:
#    metadata:
#      name: nginx
#      labels:
#        app: nginx
#    spec:
#      containers:
#        - name: nginx
#          image: nginx:alpine
#          imagePullPolicy: IfNotPresent
#          ports:
#            - containerPort: 80
#          env:
#            - name: MY_ENV
#              value: MY_SECRET_VALUE
